# jpg-lab

./: README.md  pyproject.toml
jpg_lab/: cli.py  color.py  math.py  web.py
jpglab/: api.py  cli.py  web.py
jpglab/client/: index.html  index.js  package-lock.json  package.json  styles.css
jpglab/client/src/: App.jsx
test_data/: licenses.md
