[tool.poetry]
name = "jpglab"
version = "0.1.0"
description = ""
authors = ["Tristan Slater <hello@trslater.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Pillow = "^9.1.1"
numpy = "^1.22.3"
scipy = "^1.8.1"
pandas = "^1.4.2"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
